--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
-html {
-  font-family: 'Noto Sans JP', sans-serif;
-}
-
 body {
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  padding: 0;
   background-color: #f3f3f3;
 }
 
@@ -31,9 +27,12 @@ background-color: white;
 .search:focus-within {
 outline: 2px solid rgba(7, 7, 238, 0.5);
 }
+.search_icon path {
+  fill: white;
+}
 
 .search_field {
-padding: 1.125rem;
+padding: 1rem;
 font-size: 1.125rem;
 flex: 1;
 border: none;
@@ -75,7 +74,7 @@ width: 1.5rem;
 cursor: not-allowed;
 }
 
-.visually_hidden {
+.hidden-label {
 clip: rect(0 0 0 0);
 clip-path: inset(50%);
 height: 1px;
@@ -83,6 +82,44 @@ overflow: hidden;
 position: absolute;
 white-space: nowrap;
 width: 1px;
+}
+
+table {
+  width: 100%;
+  margin-top: 4rem;
+  border-collapse: collapse;
+  background-color: #ffffff;
+  color: #3e3d3d;
+}
+
+tr {
+  border: 1px solid #c6c5c5;
+}
+
+th, td {
+  padding: 1rem;
+}
+
+th {
+  color: #474646;
+  text-align: left;
+  width: 24%;
+}
+
+.icon-width {
+  width: 5%;
+}
+.name-width {
+  width: 33%;
+}
+
+.arrow_btn {
+  border: none;
+  background-color: #faf9f9;
+}
+
+.isRotated {
+  transform: rotate(-180deg);
 }
 
 @media (max-width: 400px) {
